infor y saldos en el main

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,8 +3,10 @@
 	--black: #000000;
 	--very-light-pink: #C7C7C7;
 	--text-input-field: #F7F7F7;
+	--light-gray: #838383;
 	--hospital-green: #ACD9B2;
 	--main-green: #11c511;
+	--main-red:#b32121;
 	--main-bluegray: #263642;
 	--sm: 14px;
 	--md: 16px;
