--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
-    grid-auto-rows: minmax(30vh, auto);
+    grid-auto-rows: calc(100vh/3 - 1.67em);
     gap: 0.8rem;
     padding: 0.8rem;
 }
@@ -43,7 +43,7 @@
     padding: 0.2rem 0.8rem;
 }
 
-.home-saldoscard h2
+.home-saldoscard h2, .home-cuentascard .head h3, .home-transacciones .head h3
 {
     margin: 0;
     font-size: 1.3rem;
@@ -76,7 +76,7 @@
 
 .home-saldoscard .saldo-container h3
 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 600;
     margin: 0;
 }
@@ -89,4 +89,119 @@
 {
     font-size: 1rem;
     font-weight: 200;
+}
+
+.home-cuentascard
+{
+    grid-row: 2/4;
+}
+
+
+.home-cuentascard .head, .home-transacciones .head
+{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 .4rem;
+    margin-bottom: 0.4rem;
+}
+
+.home-cuentascard .head button, .home-transacciones .head button
+{
+    background: #12bfb1;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    font-weight: 700;
+    padding: 0.3rem 0.5rem;
+}
+
+.home-cuentascard .cuenta
+{
+    display: flex;
+    padding: 0.2rem 0;
+    border-top: solid 1px lightgray;
+    padding-bottom: 0.4rem;
+    cursor: pointer;
+}
+
+.home-cuentascard .cuenta:hover
+{
+    background-color: var(--hover-gray);
+}
+
+.home-cuentascard .cuenta > div
+{
+    flex-basis: 50%;
+    box-sizing: border-box;
+    padding: 0 0.4rem;
+}
+
+.home-cuentascard .cuenta p
+{
+    font-size: 0.8rem;
+    text-align: left;
+    margin: 0;
+    font-weight: 300;
+}
+
+.home-transacciones
+{
+    grid-column: 2/4;
+    grid-row: 2/4;
+}
+
+.home-transacciones .head button
+{
+    padding: 0 .2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.home-transacciones .head button svg
+{
+    width: 1.4em;
+    height: 1.4em;
+}
+
+.home-transacciones table.transacciones
+{
+    width: 100%;
+    background-color: var(--hover-gray);
+    border-collapse: collapse;
+}
+
+.home-transacciones table.transacciones th, .home-transacciones table.transacciones td
+{
+    font-weight: 400;
+    background: white;
+    text-align: center;
+    padding: 0.4rem;
+    font-size: 0.9rem;
+}
+
+.home-transacciones table.transacciones tr
+{
+    border: solid 1px lightgray;
+    border-left: none;
+    border-right: none;
+}
+.home-transacciones table.transacciones td
+{
+    font-weight: 300;
+    padding: 0.8rem 0.4rem;
+}
+
+.home-transacciones table.transacciones td.green
+{
+    color: var(--main-green);
+}
+.home-transacciones table.transacciones td.red
+{
+    color: var(--main-red);
+}
+
+.home-transacciones .tabla-container
+{
+    max-height: calc(100% - 40px);
+    overflow: auto;
 }
