--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,6 +7,7 @@
 	--hospital-green: #ACD9B2;
 	--main-green: #11c511;
 	--main-red:#b32121;
+	--hover-gray:#e4fffe;
 	--main-bluegray: #263642;
 	--sm: 14px;
 	--md: 16px;
