--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,6 +4,7 @@
 	--very-light-pink: #C7C7C7;
 	--text-input-field: #F7F7F7;
 	--light-gray: #838383;
+	--very-light-gray: #efefef;
 	--hospital-green: #ACD9B2;
 	--main-green: #11c511;
 	--main-red:#b32121;
